# Synapse-Clinical-AI

./: .gitignore  Platform_walkthrough.md  README.md  api.py  api1.py  app12.py  app13.py  auth.py  database.py  doc_assist12.py  hospital.db  pyproject.toml  report_ui.html  setup_db.py  test_db.py
clinical_vector_storage/collection/patient_records/: storage.sqlite
qdrant_data_persistent/collection/patient_records/: storage.sqlite
qdrant_storage/: meta.json
qdrant_storage/collection/patient_records/: storage.sqlite
